fix: connection strings.

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,7 @@ DEL_INSTANCE=false
 
 # Provider: postgresql | mysql | psql_bouncer
 DATABASE_PROVIDER=postgresql
-DATABASE_CONNECTION_URI='postgresql://user:pass@postgre-evolution:5436/evolution_db?schema=evolution_api'
+DATABASE_CONNECTION_URI='postgresql://user:pass@host.docker.internal:5436/evolution_db?schema=evolution_api'
 # Client name for the database connection
 # It is used to separate an API installation from another that uses the same database.
 DATABASE_CONNECTION_CLIENT_NAME=evolution_exchange
@@ -242,7 +242,7 @@ EVOAI_ENABLED=false
 # Cache - Environment variables
 # Redis Cache enabled
 CACHE_REDIS_ENABLED=true
-CACHE_REDIS_URI=redis://redis-evolution:6380/6
+CACHE_REDIS_URI=redis://host.docker.internal:6380/6
 CACHE_REDIS_TTL=604800
 # Prefix serves to differentiate data from one installation to another that are using the same redis
 CACHE_REDIS_PREFIX_KEY=evolution
